--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
+  "name": "optiwallet",
+  "version": "0.0.1",
   "description": "",
   "type": "module",
   "scripts": {
@@ -14,13 +14,13 @@
   "devDependencies": {
     "@solidjs/testing-library": "^0.8.10",
     "@testing-library/jest-dom": "^6.6.3",
-    "jsdom": "^25.0.1",
-    "typescript": "^5.7.2",
+    "jsdom": "^26.1.0",
+    "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vite-plugin-solid": "2.11.2",
-    "vitest": "^3.0.0"
+    "vitest": "^3.2.3"
   },
   "dependencies": {
-    "solid-js": "^1.9.5"
+    "solid-js": "^1.9.7"
   }
 }
