--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,17 @@
     "jsdom": "^26.1.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "vite-plugin-solid": "2.11.2",
-    "vitest": "^3.2.3"
+    "vite-plugin-solid": "^2.11.2",
+    "vitest": "^3.2.3",
+    "tailwindcss": "^4.1.10",
+    "@tailwindcss/vite": "^4.1.10"
   },
   "dependencies": {
-    "solid-js": "^1.9.7"
+    "@kobalte/core": "^0.13.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "solid-js": "^1.9.7",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
