--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@kobalte/core": "^0.13.10",
+    "@solidjs/router": "^0.15.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "solid-js": "^1.9.7",
