--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@solidjs/router": "^0.15.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.9.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
