--- a/client/package.json
+++ b/client/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "@kobalte/core": "^0.13.10",
     "@solidjs/router": "^0.15.3",
+    "apexcharts": "^4.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "solid-apexcharts": "^0.4.0",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.9.7",
     "solid-zustand": "^1.8.1",
