Add db client and basic routing

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ node_modules
 *.launch
 .settings/
 dist
+.vscode
 
 # Temp
 gitignore
@@ -27,3 +28,4 @@ gitignore
 # System Files
 .DS_Store
 Thumbs.db
+.env
