--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,16 @@
   },
   "dependencies": {
     "dotenv": "^17.2.0",
-    "elysia": "latest"
+    "@elysiajs/swagger": "^1.3.1",
+    "drizzle-orm": "^0.44.2",
+    "elysia": "latest",
+    "elysia-helmet": "^3.0.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@types/pg": "^8.15.4",
+    "bun-types": "latest",
+    "drizzle-kit": "^0.31.4"
   },
   "module": "src/index.js"
 }
