--- a/server/package.json
+++ b/server/package.json
@@ -3,27 +3,24 @@
   "version": "0.0.1",
   "scripts": {
     "test": "bun test",
-    "dev": "bun run --watch src/index.ts",
+    "dev": "bun lint && bun test && bun run --watch src/index.ts",
     "start": "bun run src/index.ts",
     "lint": "bun run eslint . --ext .ts,.js",
     "build": "bun run drizzle-kit generate && bun lint && bun test && bun run tsc",
     "push-db": "bunx drizzle-kit push"
   },
   "dependencies": {
-    "dotenv": "^17.2.0",
     "@elysiajs/swagger": "^1.3.1",
     "drizzle-orm": "^0.44.3",
     "elysia": "latest",
-    "elysia-helmet": "^3.0.0",
-    "pg": "^8.16.3"
+    "elysia-helmet": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
-    "@types/pg": "^8.15.4",
+    "@types/bun": "^1.2.19",
     "bun-types": "latest",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.31.0",
-    "globals": "^16.3.0",
     "typescript-eslint": "^8.37.0"
   },
   "module": "src/index.js"
