--- a/server/package.json
+++ b/server/package.json
@@ -6,14 +6,17 @@
     "dev": "bun i && bun run tsc && bun lint && bun test && bun run --watch src/index.ts",
     "start": "bun run src/index.ts",
     "lint": "bun run eslint --fix . --ext .ts,.js",
-    "build": "bun run drizzle-kit generate && bun lint && bun test && bun run tsc",
+    "build": "bun run drizzle-kit generate && bun lint && bun test && bun build src/index.ts --target bun --outdir dist --production && tsc",
     "push-db": "bunx drizzle-kit push"
   },
   "dependencies": {
+    "@bogeychan/elysia-logger": "^0.1.8",
     "@elysiajs/swagger": "^1.3.1",
     "drizzle-orm": "^0.44.3",
-    "elysia": "latest",
-    "elysia-helmet": "^3.0.0"
+    "elysia": "^1.3.6",
+    "elysia-helmet": "^3.0.0",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
