--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@kobalte/core": "^0.13.11",
     "@solidjs/router": "^0.15.4",
+    "@tanstack/solid-query": "^5.90.23",
     "apexcharts": "^4.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
