--- a/server/package.json
+++ b/server/package.json
@@ -10,21 +10,22 @@
     "push-db": "bunx drizzle-kit push"
   },
   "dependencies": {
-    "@bogeychan/elysia-logger": "^0.1.8",
+    "@bogeychan/elysia-logger": "^0.1.10",
+    "@elysiajs/cors": "^1.4.1",
     "@elysiajs/swagger": "^1.3.1",
-    "drizzle-orm": "^0.44.3",
-    "elysia": "^1.3.6",
+    "drizzle-orm": "^0.44.7",
+    "elysia": "^1.4.25",
     "elysia-helmet": "^3.0.0",
-    "pino": "^9.9.0",
-    "pino-pretty": "^13.1.1"
+    "pino": "^9.14.0",
+    "pino-pretty": "^13.1.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
-    "@types/bun": "^1.2.19",
-    "drizzle-kit": "^0.31.4",
-    "eslint": "^9.31.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.38.0"
+    "@eslint/js": "^9.39.3",
+    "@types/bun": "^1.3.9",
+    "drizzle-kit": "^0.31.9",
+    "eslint": "^9.39.3",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.0"
   },
   "module": "src/index.js"
 }
